# rust-link-scraper

./: Cargo.toml  README.md
src/: add_protocol.rs  check_link_status.rs  get_base_url.rs  get_link_status.rs  get_links.rs  get_response.rs  handle_entry.rs  helpers.rs  identify_base_url.rs  joke.rs  main.rs  parse_links_from_document.rs  read_response.rs
src/mocks/: test_no_link.html  test_with_link.html
