[package]
name = "link-scraper"
version = "0.1.0"
authors = ["Joseph <z@charmed.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.1"
reqwest = "0.9.22"
select = "0.4.3"
url = "2.1.0"
term = "0.6.1"
